<resources>
    <string name="app_name">计分工具</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    //温度转换工具
    <string name="btn1_ame">bobo</string>
    <string name="m_Vtext">Hello</string>
    <string name="m_btn">转换</string>
    <string name="edit_hint">请输入摄氏度</string>

    //计分器
    <string name="teamName">LGD</string>
    <string name="originScore">0</string>
    <string name="add3">+3</string>
    <string name="add2">+2</string>
    <string name="add1">+1</string>
    <string name="resetBtn">reset</string>
    <string name="team2Name">VG</string>


    //exchange
    <string name="exchange_hint">请输入要兑换的人民币金额</string>
    <string name="exc_btn1">美元</string>
    <string name="exc_btn2">欧元</string>
    <string name="exc_btn3">英镑</string>
    <string name="exc_btn4">日元</string>
    <string name="exc_btn5">法郎</string>
    <string name="exc_btn6">澳元</string>
    <string name="exc_btn7">加元</string>
    <string name="exc_btn8">港元</string>
    <string name="start_another">切换工具</string>
    <string name="config_btn">设置汇率</string>
    <string name="save_btn">保存</string>
    <string name="menu_item">设置</string>
    <string name="lable_open_list">打开列表</string>
    <string name="SingleExcTitle">汇率转换</string>
    <string name="SearchApp_name">西南财经大学通知查询器</string>
    <string name="Search_hint">请输入要搜索的内容</string>
    <string name="Search_Btn">查询</string>
</resources>
