<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CountScoreActivity">

    <Button
        android:id="@+id/button2"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="111dp"
        android:layout_marginLeft="111dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="112dp"
        android:layout_marginRight="112dp"
        android:layout_marginBottom="43dp"
        android:background="@color/colorAccent"
        android:onClick="btnReset"
        android:text="@string/resetBtn"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="173dp"
            android:layout_height="413dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/teamName"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/teamName"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/score"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/originScore"
                android:textSize="65sp" />

            <Button
                android:id="@+id/score1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="btnAdd3"
                android:text="@string/add3"
                android:textSize="30sp" />

            <Button
                android:id="@+id/score2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="btnAdd2"
                android:text="@string/add2"
                android:textSize="30sp" />

            <Button
                android:id="@+id/score3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="btnAdd1"
                android:text="@string/add1"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/team2Name"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/team2Name"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/T2score"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/originScore"
                android:textSize="65sp" />

            <Button
                android:id="@+id/T2score1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="btn2Add3"
                android:text="@string/add3"
                android:textSize="30sp" />

            <Button
                android:id="@+id/T2score2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="btn2Add2"
                android:text="@string/add2"
                android:textSize="30sp" />

            <Button
                android:id="@+id/T2score3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="btn2Add1"
                android:text="@string/add1"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>